# zellij-tab-status

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.test  Makefile  README.md  test-plugin.sh
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-12-auto-config-design.md  2026-02-12-auto-config-plan.md  2026-02-12-zellij-plugin-migration.md  2026-02-17-docker-integration-tests.md  2026-02-23-index-probing-design.md  2026-02-23-index-probing-plan.md
scripts/: configure-zellij.sh  docker-plugin-dedup-check.sh  docker-test-runner.sh  integration-test.sh  issue5-regression-check.sh  issue6-raw-regression-check.sh  issue6-regression-check.sh  zellij-rename-tab  zellij-tab-status
src/: blink_runtime.rs  lib.rs  main.rs  pipe_handler.rs  probing.rs  status_utils.rs  tab_name.rs  zellij_api.rs
