[package]
name = "zellij-tab-status"
version = "0.8.1"
edition = "2021"
authors = ["Danil Pismenny <danilpismenny@gmail.com>"]
description = "CLI tool for managing tab status with emoji prefixes in Zellij"
license = "MIT"
repository = "https://github.com/dapi/zellij-tab-status"

[[bin]]
name = "zellij-tab-status"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.10"
